--- a/src/components/styles.module.sass
+++ b/src/components/styles.module.sass
@@ -81,6 +81,14 @@
     box-shadow: 0px 0px 5px 0px #707070
     border-radius: 5px
 
+.soon
+    color: #ca1e1e
+    box-shadow: 0px 0px 5px 0px #ca1e1e !important
+    animation: heartbeat 1s infinite
+
+.red
+    color: #ca1e1e
+
 .sector
     display: flex
     flex-direction: column
